# bibleAI

./: .gitignore
agents/: agent_backend_engineer.md  agent_ios_engineer_lead.md  agent_mental_health_advisor.md  agent_ml_engineer.md  agent_qa_test_engineer.md  agent_theology_advisor.md  orchestrator.md
backend/: .env.example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_subscription_entitlements.py  0003_credit_ledger.py  0004_analytics_events.py  0005_iap_transactions.py
backend/app/: auth.py  citation.py  config.py  crypto.py  database.py  logger.py  main.py  models.py  pipeline.py  safety.py  schemas.py  streaming.py
backend/app/llm/: __init__.py  claude_provider.py  errors.py  factory.py  provider.py  stub_provider.py
backend/app/prompting/: default_prompt.py  router.py  safety_override.py  wwjd_prompt.py  wwjd_schema.py
backend/app/routers/: analytics.py  auth.py  credits.py  entitlements.py  iap.py  messages.py  safety.py  sessions.py
backend/app/services/: analytics.py  credits.py  entitlements.py  iap_verification.py  subscription_sync.py
backend/docs/: KEY_MANAGEMENT.md
backend/eval/: README_eval.md  __init__.py  ci_gate.py  gold_set.jsonl  metrics.py  runner.py  stub_baseline.json
backend/scripts/: README_corpus.md  ingest_bible_corpus.py  verify_corpus.py
backend/scripts/data/: .gitignore
backend/tests/: conftest.py  test_analytics.py  test_api.py  test_citation.py  test_credits.py  test_crypto.py  test_entitlements.py  test_iap_verify.py  test_llm_provider.py  test_p0_integration.py  test_pipeline_with_provider.py  test_streaming.py  test_subscription_sync.py  test_wwjd_prompting.py
backend/tests/fixtures/: bible_verses_seed.sql
governance/: DECISIONS.md  DEPENDENCIES.md  (+8 more)
(+319 files in other folders)
