[project]
name = "bible-therapist-backend"
version = "0.1.0"
description = "Bible-grounded reflection chat API"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "structlog>=24.2.0",
    "pgvector>=0.3.0",
    "cryptography>=42.0.0",
    "anthropic>=0.39.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

# Tool choice: uv (https://docs.astral.sh/uv)
# Selected over Poetry for faster installs and simpler lock file.
# Usage:
#   uv sync               — install all deps
#   uv sync --no-dev      — install prod deps only
#   uv run uvicorn ...    — run inside the venv
#   uv run pytest         — run tests

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "p0_session: P0-01 session lifecycle tests",
    "p0_idempotency: P0-02 idempotency tests",
    "p0_sse: P0-03 SSE streaming contract tests",
    "p0_safety: P0-04 safety gating / risk.interrupt tests",
    "p0_report: P0-05 report persistence tests",
    "pending_t007: excluded from CI until T007 (real LLM pipeline) is complete",
    "eval: T015 eval harness — safety classification quality gate",
    "eval_stub: eval harness tests that run against the keyword stub (no LLM/DB)",
    "eval_live: eval harness tests that require T007 + live pipeline",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
